tests/test_assets/semantic/invalid/casts/invalid_kind_conversions.expected
semantic error at line 12: invalid explicit cast
semantic error at line 19: invalid explicit cast
semantic error at line 23: invalid explicit cast
semantic error at line 27: invalid explicit cast
semantic error at line 31: invalid explicit cast
5 semantic errors generated.
